--- a/style.css
+++ b/style.css
@@ -13,12 +13,16 @@ html {
 
 body {
     height: 100%;
+    position: relative;
   
 }
 
 .container-home {
     height: 100%;
-    position: relative;
+    width: 100%;
+    position: absolute;
+    top: 580px;
+    display: flex;
 
 }
 
@@ -31,6 +35,8 @@ body img {
 .bg {
     position: absolute;
     top: 0;
+    filter: blur(4px);
+    -webkit-filter: blur(4px);
     z-index: -1;
 }
 
@@ -38,18 +44,17 @@ body img {
     background-color: cornflowerblue;
     background: transparent;
     height: 80px;
+    width: 100%;
     position: sticky;
     top: 0;
-    transition: 0.7s ease-in-out;
-}
-
-.navbar:hover {
-    background-color: black;
+    margin-left: 50%;
+    transform: translateX(-50%);
 }
 
 
 nav{
     height: 100%;
+    width: 100%;
     
 }
 
@@ -58,6 +63,7 @@ nav{
     padding: 0;
     margin: 0;
     height: 100%;
+    width: 100%;
 
 }
 
@@ -67,19 +73,28 @@ nav ul {
     justify-content: center;
     align-items: center;
     height: 100%;
+    width: 100%;
+}
+.nav-list li {
+    transition: 0.4s ease-in-out;
 }
 
 
 
 .nav-list a {
-    background-color: tomato;
+    background: transparent;
     text-decoration: none;
     font-weight: bold;
     color: #fff;
-    border: 1px solid black;
+    border: none;
     margin: 30px;
     padding: 10px;
     text-transform: uppercase;
     letter-spacing: 0.08em;
     border-radius: 20px;
+    
+}
+
+.nav-list li:hover {
+    transform: scale(1.2);
 }
