--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
 
 * {
     font-family: 'Poppins', sans-serif;
@@ -9,12 +10,87 @@
 
 html {
     height: 400%;
+    scroll-behavior: smooth;
 }
 
 body {
     height: 100%;
     position: relative;
   
+}
+
+
+.profile-photo {
+    height: 70vh;
+    width: 100%;
+    position: relative;
+}
+.profile-photo img {
+    height: 250px;
+    width: 250px;
+    position: absolute;
+    margin: auto;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 50%;
+    bottom: 300px;
+    
+
+}
+.dp {
+    position: absolute;
+    border-radius: 50%;
+    border: 7px solid #fff;
+    animation-name: dp-animation;
+    animation-duration: 1s;
+    
+    
+}
+
+.introduction {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    bottom: 5%;
+    padding: 1% 10% 0 10%;
+    width: 100%;
+    animation-name: intro-ani;
+    animation-duration: 3s;
+    transition: 0.1s ease;
+    
+   
+}
+
+
+.introduction h5, h1, p {
+    text-align: center;
+    color: #ffffff;
+    text-shadow: 2px 2px #000;
+    font-weight: bold;
+     font-family: 'Montserrat', sans-serif;
+     margin: 5px;
+   -webkit-animation: bounce-in-top 1.1s both;
+	        animation: bounce-in-top 1.1s both;
+   
+    
+}
+
+
+
+.introduction p {
+    font-size: 1.2em;
+    letter-spacing: 2px;
+}
+.introduction h5 {
+    letter-spacing: 2px;
+    
+}
+
+.introduction strong {
+    color: #2a687a;
+    text-transform: uppercase;
 }
 
 .container-home {
@@ -35,8 +111,7 @@ body img {
 .bg {
     position: absolute;
     top: 0;
-    filter: blur(4px);
-    -webkit-filter: blur(4px);
+    -webkit-filter: blur(2px);
     z-index: -1;
 }
 
@@ -49,6 +124,7 @@ body img {
     top: 0;
     margin-left: 50%;
     transform: translateX(-50%);
+    
 }
 
 
@@ -92,9 +168,154 @@ nav ul {
     text-transform: uppercase;
     letter-spacing: 0.08em;
     border-radius: 20px;
+    -webkit-text-stroke: 1px black;
+    text-shadow:
+       3px 3px 0 #000,
+     -1px -1px 0 #000,  
+      1px -1px 0 #000,
+      -1px 1px 0 #000,
+       1px 1px 0 #000;
     
 }
 
 .nav-list li:hover {
     transform: scale(1.2);
+}
+
+@-webkit-keyframes dp-animation {
+
+   from {
+       
+       transform: scale(0);
+       -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+
+       
+   }
+
+   to {
+       transform: scale(1);
+       -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+   }
+
+}
+
+/*@keyframes intro-ani {
+    from {
+        right: -200px;
+    }
+    to {
+        bottom: 5%;
+    }
+}
+
+} */
+
+@-webkit-keyframes bounce-in-top {
+  0% {
+    -webkit-transform: translateY(-500px);
+            transform: translateY(-500px);
+    -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+    opacity: 0;
+  }
+  38% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    -webkit-animation-timing-function: ease-out;
+            animation-timing-function: ease-out;
+    opacity: 1;
+  }
+  55% {
+    -webkit-transform: translateY(-65px);
+            transform: translateY(-65px);
+    -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+  }
+  72% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    -webkit-animation-timing-function: ease-out;
+            animation-timing-function: ease-out;
+  }
+  81% {
+    -webkit-transform: translateY(-28px);
+            transform: translateY(-28px);
+    -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+  }
+  90% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    -webkit-animation-timing-function: ease-out;
+            animation-timing-function: ease-out;
+  }
+  95% {
+    -webkit-transform: translateY(-8px);
+            transform: translateY(-8px);
+    -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+  }
+  100% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    -webkit-animation-timing-function: ease-out;
+            animation-timing-function: ease-out;
+  }
+}
+@keyframes bounce-in-top {
+  0% {
+    -webkit-transform: translateY(-500px);
+            transform: translateY(-500px);
+    -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+    opacity: 0;
+  }
+  38% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    -webkit-animation-timing-function: ease-out;
+            animation-timing-function: ease-out;
+    opacity: 1;
+  }
+  55% {
+    -webkit-transform: translateY(-65px);
+            transform: translateY(-65px);
+    -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+  }
+  72% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    -webkit-animation-timing-function: ease-out;
+            animation-timing-function: ease-out;
+  }
+  81% {
+    -webkit-transform: translateY(-28px);
+            transform: translateY(-28px);
+    -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+  }
+  90% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    -webkit-animation-timing-function: ease-out;
+            animation-timing-function: ease-out;
+  }
+  95% {
+    -webkit-transform: translateY(-8px);
+            transform: translateY(-8px);
+    -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+  }
+  100% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    -webkit-animation-timing-function: ease-out;
+            animation-timing-function: ease-out;
+  }
+}
+
+
 }
